[package]
name = "flappy_dragon"
version = "0.1.0"
edition = "2021"


[workspace]
members  = [ "anim2", "eased_motion", "flappy_dragon_base", "my_library" , "twod_shape"]

[workspace.dependencies]
bevy = "0.12"
anyhow = "1"
rand = "0.8"
rand_pcg = { version = "0.3" }
rand_xorshift = { version = "0.3" }

[package.metadata.twod_shape]
wasm = true

[package.metadata.anim2]
wasm = true