[package]
name = "my_library"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
rand_pcg = { workspace = true, optional = true }
rand_xorshift = { workspace = true, optional = true }
bevy  = { workspace = true }
anyhow = "1"
bevy_egui = "0.23"

[features]
default = [ "pcg" ]
pcg = [ "rand_pcg" ]
xorshift = [ "rand_xorshift" ]
locking = []

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "random"
harness = false
